# roxi

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  gmon.out  notes.txt  tags
lofi/: CMakeLists.txt  README.txt  compile_commands.json  tags
lofi/.cache/clangd/index/: indices.inl.2EBE856C84BA932D.idx  indices.inl.CCDA696ABF8E5E70.idx  l_allocator.hpp.DDAED483DA18FA63.idx  l_arena.hpp.60E2D917C95F521F.idx  l_base.hpp.AF621F11AC94F03C.idx  l_base.hpp.BEDAC60D1021ED2D.idx  l_base.hpp.EE6D56D33C191EB4.idx  l_component.hpp.8675B607EB026691.idx  l_component.hpp.8CE5EFC0658FD4D4.idx  l_component.hpp.AB3F6833847788EF.idx  l_container.hpp.1A2686F4695A1F1F.idx  l_database.hpp.41029C0E9CD7F79F.idx  l_database.hpp.487DEF9ED8EB33B8.idx  l_database.hpp.D90FE5F47096F1CC.idx  l_definition.hpp.2C954BD00AD57883.idx  l_ecs.hpp.D4225672AA6FDD43.idx  l_ecs.hpp.E9CD691C5F202932.idx  l_ecs.hpp.F707A58F44CBE020.idx  l_entity.hpp.790DDADB3DD0199D.idx  l_entity.hpp.8C173DDC20EB13B7.idx  l_fiber.hpp.46FA2C33B7B5F4C4.idx  l_fiber.hpp.9A6B21345D870C39.idx  l_file.hpp.6B787F8D0913AB12.idx  l_file.hpp.ED406F1B61356023.idx  l_job.hpp.2A0750A612BF23B8.idx  l_job.hpp.9E14A97B42C621B8.idx  l_job.hpp.B75E52241E02C4AF.idx  l_memory.hpp.CBC7E60C17726388.idx  l_memory.hpp.D9D8AE9EDD372001.idx  l_memory.hpp.F4E898B5EE78E221.idx  l_meta.hpp.130C21D751942506.idx  l_meta.hpp.6E5901A7BD5E1A55.idx  l_meta.hpp.EC050B54E7B37AC0.idx  l_string.hpp.858CC50DB8CE62F6.idx  l_string.hpp.882A7ED082C42B66.idx  l_string.hpp.C66D207EE7428208.idx  l_sync.hpp.68D5F6368DF6F33B.idx  l_sync.hpp.BF78B4E37F2444DF.idx  l_sync.hpp.C14CBAF3DA923C0D.idx  l_system.hpp.2DDBEA07D9D3B8A1.idx  (+18 more)
lofi/core/: CMakeLists.txt
lofi/core/include/: l_allocator.hpp  l_arena.hpp  l_base.hpp  l_container.hpp  l_database.hpp  l_definition.hpp  l_fiber.hpp  l_file.hpp  l_job.hpp  l_map.hpp  l_memory.hpp  l_meta.hpp  l_parser.hpp  l_poly.hpp  l_string.hpp  l_sync.hpp  l_thread_pool.hpp  l_tuple.hpp  l_variant.hpp  l_vocab.hpp
lofi/core/include/deprecated/: l_memory_deprecated.hpp
lofi/core/include/ecs/: l_component.hpp  l_ecs.hpp  l_entity.hpp  working_buff.txt
lofi/core/include/inline/: indices.inl  preprocessor.hpp  switch.inl
lofi/core/include/meta/: CMakeLists.txt  at.hpp  dispatch.hpp  drop.hpp  find.hpp  has.hpp  index.hpp  join.hpp  same.hpp  sequence.hpp  size.hpp  sort.hpp  split.hpp  sum.hpp  vocab.hpp
lofi/ninja-build/: CMakeCache.txt  build.ninja  cmake_install.cmake
lofi/ninja-build/core/: cmake_install.cmake
lofi/ninja-build/core/include/: cmake_install.cmake
lofi/ninja-build/core/include/meta/: cmake_install.cmake
lofi/test/: CMakeLists.txt  test.cpp
lofi/test/cmake/: test_funcs.cmake
prebuild/: CMakeLists.txt  audio_config.cpp  compile_commands.json  compile_shaders.cpp  ecs_config.cpp  graphics_config.cpp  shader_config.cpp
prebuild/.cache/clangd/index/: audio_config.cpp.0018B340E23A0C6C.idx  audio_config.cpp.E6E71F6C0FDA8744.idx  ecs_config.cpp.0FF703DB235776A2.idx  graphics_config.cpp.22701B050A6D2A97.idx  graphics_config.cpp.BFA7E23F4E0BE8DA.idx  shader_config.cpp.E605712CE65D215A.idx  spirv.h.ECF86BDCCFA37F83.idx  spirv_reflect.c.265E237FD2E497B9.idx  spirv_reflect.cpp.B754C7BBC3EFDEA6.idx  spirv_reflect.h.988922A5A0A8E12D.idx
prebuild/cmake/config/: config_macro.cmake  shader_config_macro.cmake
prebuild/in/: 20bottom_alley_angle.mtl  ecs_archetypes.csv  ecs_components.csv  ecs_typedef.csv  ground_alley_angle.mtl
prebuild/include/: spirv_reflect.h
prebuild/lua/: archetype.lua  component.lua  system.lua  type_def.lua
roxi/: CMakeLists.txt
roxi/core/common/include/: error.h  pch.h  rx_allocator.hpp  rx_arena.hpp  rx_container.hpp  rx_file.hpp  rx_input.h  rx_load.h  rx_log.hpp  rx_string.hpp  rx_thread_pool.hpp  rx_time.h  rx_tuple.hpp  rx_variant.hpp  rx_vocab.h
roxi/core/common/src/: error.cpp  rx_allocator.cpp  rx_arena.cpp  rx_log.cpp  rx_thread_pool.cpp  rx_time.cpp
roxi/core/ecs/include/: rx_ecs.hpp
roxi/core/ecs/src/: rx_ecs.cpp
roxi/core/frame/: rx_frame_manager.hpp
roxi/core/gpu/data/: aabb.hpp  bda.hpp  data.hpp  light.hpp  pods.hpp  push_constants.hpp  ubo.hpp  vertex.hpp
roxi/core/gpu/include/: rx_gpu_device.hpp  rx_gpu_loader.hpp  rx_renderer.hpp  rx_rendergraph.hpp
roxi/core/gpu/shaders/: CMakeLists.txt
roxi/core/gpu/shaders/header/: common.glsl  generate_partitions.glsl  resolve_collisions.glsl  sort_collisions_by_object.glsl
roxi/core/gpu/shaders/ninja-build/: CMakeCache.txt  cmake_install.cmake  (+2 more)
roxi/core/gpu/src/: rx_gpu_device.cpp  rx_renderer.cpp
roxi/core/math/include/: rx_math.hpp
roxi/core/math/src/: rx_math.cpp
roxi/core/renderer/include/: rx_renderer.hpp  rx_rendergraph.hpp
roxi/core/renderer/old_shaders/: camera_ubo.glsl  cube.glsl  draw_indirect_command.glsl  frustum.glsl  frustum_culling.comp  light_data.glsl  material_type.glsl  model_ubo.glsl  skinning.comp
roxi/core/renderer/src/: rx_renderer.cpp  rx_rendergraph.cpp
roxi/core/resource/: audio_resources.hpp  ecs_resources.hpp  mesh_resources.hpp  resource.h  roxi.rc  rx_resource_manager.hpp  shader_resources.hpp
roxi/core/resource/spirv/: aabb_generator.comp.spv  aabb_render.frag.spv  basic_shader.frag.spv  basic_shader.vert.spv  build_skybox.frag.spv  frustum_culling.comp.spv  frustum_draw_indirect.comp.spv  fullscreen_triangle.vert.spv  generate_partition.comp.spv  light_culling.comp.spv  light_culling_batch.comp.spv  light_orb.frag.spv  light_orb.vert.spv  line.frag.spv  line.vert.spv  scene.frag.spv  scene.vert.spv  skybox.frag.spv  skybox.vert.spv  tonemap.frag.spv
roxi/core/rlsl/include/: rx_compiler.hpp  rx_dynamic_ecs.hpp  rx_lexer.hpp  rx_parser.hpp  rx_system_graph.hpp
roxi/core/rlsl/src/: rx_dynamic_ecs.cpp  rx_system_graph.cpp
roxi/core/scripting/: rx_lua.hpp
roxi/core/systems/: rx_system.hpp
roxi/core/systems/graphics/: rx_graphics.hpp
roxi/core/systems/physics/: rx_physics.hpp
roxi/core/windows/include/: message_handler.h  window.h
roxi/core/windows/src/: message_handler.cpp  window.cpp
roxi/include/: Application.h
roxi/src/: Application.cpp
(+582 files in other folders)
